Name: network-natpmp
Version: 0.1
Category: Network
Stability: experimental
Synopsis: NAT-PMP data structures
Description:
  This package provides NAT Port Mapping Protocol (NAT-PMP) data structures.

Homepage: https://github.com/mvv/network-natpmp
Bug-Reports: https://github.com/mvv/network-natpmp/issues

Author: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Maintainer: Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
Copyright: 2013 Mikhail Vorozhtsov <mikhail.vorozhtsov@gmail.com>
License: BSD3
License-File: LICENSE

Cabal-Version: >= 1.10.0
Build-Type: Simple

Source-Repository head
  Type: git
  Location: https://github.com/mvv/network-natpmp.git

Library
  Default-Language: Haskell2010
  Build-Depends:
    base         >= 4.6 && < 5,
    hashable     >= 1.2,
    data-textual >= 0.1,
    network-ip   >= 0.1,
    bytestring   >= 0.10,
    binary       >= 0.5,
    cereal       >= 0.3
  Hs-Source-Dirs: src
  GHC-Options: -Wall
  Exposed-Modules:
    Network.NATPMP

Test-Suite tests
  Default-Language: Haskell2010
  Type: exitcode-stdio-1.0
  Build-Depends:
    base                       >= 4.6 && < 5,
    test-framework             >= 0.6,
    test-framework-quickcheck2 >= 0.2,
    QuickCheck                 >= 2.4,
    bytestring,
    network-ip,
    network-natpmp
  Hs-Source-Dirs: tests
  GHC-Options: -Wall
  Main-Is: Tests.hs

